assets/css/styles.css
/* ... */
/*Input focus sticky top label*/
.contact__input:not(:placeholder-shown).contact__input:not(:focus) + .contact__label{
  top: -.75rem;
  font-size: var(--smaller-font-size);
  z-index: 10;
}

/*=============== FOOTER ===============*/
.footer__container{
  row-gap: 3rem;
}

.footer__logo{
  display: inline-flex;
  align-items: center;
  column-gap: .5rem;
  color: var(--title-color);
  text-transform: uppercase;
  font-weight: 700;
  letter-spacing: -1px;
  margin-bottom: var(--mb-2-5);
  transition: .3s;
}

.footer__logo-icon{
  font-size: 1.15rem;
  color: var(--first-color);
}

.footer__logo:hover{
  color: var(--first-color);
}

.footer__title{
  font-size: var(--h3-font-size);
  margin-bottom: var(--mb-1-5);
}

.footer__subscribe{
  background-color: var(--first-color-lighten);
  padding: .75rem;
  display: flex;
  justify-content: space-between;
  border-radius: .5rem;
}

.footer__input{
  width: 70%;
  padding: 0 .5rem;
  background: none;
  color: var(--text-color);
  border: none;
  outline: none;
}

.footer__button{
  padding: 1rem;
}

.footer__data{
  display: grid;
  row-gap: .75rem;
}

.footer__information{
  font-size: var(--small-font-size);
}

.footer__social{
  display: inline-flex;
  column-gap: .75rem;
}

.footer__social-link{
  font-size: 1rem;
  color: var(--text-color);
  transition: .3s;
}

.footer__social-link:hover{
  transform: translateY(-.25rem);
}

.footer__cards{
  display: inline-flex;
  align-items: center;
  column-gap: .5rem;
}
.footer__card{
  width: 35px;
}

.footer__copy{
  text-align: center;
  font-size: var(--smaller-font-size);
  color: var(--text-color-light);
  margin: 5rem 0 1rem;
}

/*=============== SCROLL UP ===============*/
.scrollup{
  position: fixed;
  background-color: var(--first-color);
  right: 1rem;
  bottom: -30%;
  display: inline-flex;
  padding: .5rem;
  border-radius: .25rem;
  z-index: var(--z-tooltip);
  opacity: .8;
  transition: .4s;
}

.scrollup__icon{
  font-size: 1rem;
  color: #FFF;
}

.scrollup:hover{
  background-color: var(--first-color-alt);
  opacity: 1;
}

/* Show Scroll Up*/
.show-scroll{
  bottom: 3rem;
}

/*=============== SCROLL BAR ===============*/
::-webkit-scrollbar{
  width: .6rem;
  background: hsl(var(--hue), 4%, 53%);
}

::-webkit-scrollbar-thumb{
  background: hsl(var(--hue), 4%, 29%);
  border-radius: .5rem;
}

/*=============== BREAKPOINTS ===============*/
/* For small devices */
@media screen and (max-width: 414px){
  .container{
    margin-left: var(--mb-1);
    margin-right: var(--mb-1);
  }

  .weather-app {
    position: relative;
    right:3%;
    max-width: 19rem;
    padding: 3rem 1rem;
  }

  .home__data {
    max-width: 20rem;
  }

  .home__img{
    width: 180px;
  }
  .home__title{
    font-size: var(--h1-font-size);
  }

  .steps__bg{
    padding: 2rem 1rem;
  }
  .steps__card{
    padding: 1.5rem;
  }

  .product__container{
    grid-template-columns: .6fr;
    justify-content: center;
  }
}

@media screen and (max-width: 320px){
  .home__data {
    max-width: 15rem;
  }
}

/* For medium devices */
@media screen and (min-width: 576px){
  .steps__container{
    grid-template-columns: repeat(2, 1fr);
  }

  .product__description{
    padding: 0 4rem;
  }
  .product__container{
    grid-template-columns: repeat(2, 170px);
    justify-content: center;
    column-gap: 5rem;
  }

  .footer__subscribe{
    width: 400px;
  }
}

@media screen and (min-width: 767px){
  body{
    margin: 0;
  }

  .nav{
    height: calc(var(--header-height) + 1.5rem);
    column-gap: 3rem;
  }
  .nav__toggle,
  .nav__close{
    display: none;
  }
  .nav__list{
    flex-direction: row;
    column-gap: 3rem;
  }
  .nav__menu{
    margin-left: auto;
  }

  .home__container,
  .about__container,
  .questions__container,
  .contact__container,
  .footer__container{
    grid-template-columns: repeat(2, 1fr);
  }
  
  .home{
    padding: 10rem 0 5rem;
  }
  .home__container{
    align-items: center;
  }
  .home__img{
    width: 280px;
    order: 1;
  }
  .home__social{
    top: 30%;
  }

  .questions__container{
    align-items: flex-start;
  }

  .footer__container{
    column-gap: 3rem;
  }
  .footer__subscribe{
    width: initial;
  }
}

/* For large devices */
@media screen and (min-width: 992px){
  .container{
    margin-left: auto;
    margin-right: auto;
  }

  .section{
    padding: 8rem 0 1rem;
  }
  .section__title,
  .section__title-center{
    font-size: var(--h1-font-size);
  }

  .home{
    padding: 13rem 0 5rem;
  }
  .home__img{
    width: 350px;
  }
  .home__description{
    padding-right: 7rem;
  }

  .about__img{
    width: 380px;
  }

  .steps__container{
    grid-template-columns: repeat(3, 1fr);
  }
  .steps__bg{
    padding: 3.5rem 2.5rem;
  }
  .steps__card-title{
    font-size: var(--normal-font-size);
  }

  .product__description{
    padding: 0 16rem;
  }
  .product__container{
    padding: 4rem 0;
    grid-template-columns: repeat(3, 185px);
    gap: 4rem 6rem;
  }
  .product__img{
    width: 160px;
  }
 
  .product__title,
  .product__price{
    font-size: var(--normal-font-size);
  }

  .questions__container{
    padding: 1rem 0 4rem;
  }
  .questions__title{
    text-align: initial;
  }
  .questions__group{
    row-gap: 2rem;
  }
  .questions__header{
    padding: 1rem;
  }
  .questions__description{
    padding: 0 3.5rem 2.25rem 2.75rem;
  }

  .footer__logo{
    font-size: var(--h3-font-size);
  }
  .footer__container{
    grid-template-columns: 1fr .5fr .5fr .5fr;
  }
  .footer__copy{
    margin: 7rem 0 2rem;
  }
}

@media screen and (min-width: 1200px){
  .home__social{
    right: -3rem;
    row-gap: 4.5rem;
  }
  .home__social-follow{
    font-size: var(--small-font-size);
  }
  .home__social-follow::after{
    width: 1.5rem;
    right: -60%;
  }
  .home__social-link{
    font-size: 1.15rem;
  }

  .about__container{
    column-gap: 7rem;
  }

  .scrollup{
    right: 3rem;
  }
}

